elasticsearch/example/decrease-heap-size.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-master
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
