elasticsearch/example/env-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-master
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
          startupProbe:
            exec:
              command:
                - curl
                - --fail
                - -X POST
                - localhost:9200/_nodes/reload_secure_settings
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 60 # 60*5 = 300 seconds for container to start
            # initialize keystore with s3 credentials
          command:
            - bash
            - -c
          args:
            - |
              (
                echo $AWS_SECRET_ACCESS_KEY | elasticsearch-keystore add -f --stdin s3.client.default.secret_key
                echo $AWS_ACCESS_KEY_ID | elasticsearch-keystore add -f --stdin s3.client.default.access_key
                echo "added AWS credentials to keystore"
              ) &&
              /opt/bitnami/scripts/elasticsearch/entrypoint.sh /opt/bitnami/scripts/elasticsearch/run.sh
