elasticsearch/example/scale-down.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-master
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: elasticsearch
